--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8" />
 		<title>服装加盟_服装店加盟_库存服装加盟-喜乐库官网</title>
 		<link rel="icon" type="image/x-icon" href="img/slio.ico"/>
-		<meta http-equiv="X-UA-Compatible" content="IE=9,Chrome=1" />
 		<!-- bootstrap 3.3.7  -->
 		<link rel="stylesheet" href="bootstrap-3.3.7/css/bootstrap.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -14,10 +13,9 @@
 		<script type="text/javascript" src="js/less.js" ></script>
     	<!-- iconfont css -->
     	<link rel="stylesheet" href="iconfont/iconfont.css"  type="text/css"/>
-    	<!--[if lt IE 9]>
-		  <script src="js/html5shiv.min.js"></script>
-		  <script src="js/respond.min.js"></script>
-		<![endif]-->
+		<!--[if It IE 9]>
+	    <meta http-equiv="Refresh" content="0;url=ie.html" />
+	    <![endif]-->
 	</head>
 	<body >
 		
@@ -98,24 +96,37 @@
 				<div class="row">
 					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 f1 animate-box faded">
 						<div class="purpose">
-							<div class="transcript"><h3>企业宗旨</h3><p>全国第一家专业的、以连锁经营方式和低折扣销售国际品牌服饰、鞋帽、箱包、皮具商品的零售公司</p></div>
+							<div class="transcript"><h3>企业宗旨</h3><p>让商业回归到商业的本质——让消费者买到物超所值的商品！</p></div>
 						</div>
+						<div class="e_box">
+							<h3>企业宗旨</h3>
+							<p>让商业回归到商业的本质——让消费者买到物超所值的商品！</p>
+						</div>
+						
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 f1 animate-box faded">
 						<div class="pattern">
 							<div class="transcript"><h3>商业模式</h3><p>全国已有200多家门店</p></div>
+						</div>
+						<div class="e_box">
+							<h3>商业模式</h3>
+							<p>全国已有200多家门店</p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 f1 animate-box faded">
 						<div class="advantage">
 							<div class="transcript"><h3>喜乐库优势</h3><p>已获得40余个国内外国际品牌授权</p></div>
 						</div>
+						<div class="e_box">
+							<h3>喜乐库优势</h3>
+							<p>已获得40余个国内外国际品牌授权</p>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="more">
+			<!--<div class="more">
 	    		<a href="about.html">浏览更多<i class="iconfont icon-jiang-copy"></i></a>
-	    	</div>
+	    	</div>-->
 		</div>
 		<!-- ## company ## -->
 		
@@ -209,9 +220,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="more">
+			<!--<div class="more">
 	    		<a href="store.html">查看加盟门店<i class="iconfont icon-jiang-copy"></i></a>
-	    	</div>
+	    	</div>-->
 		</div>
 		<!-- ## shop ## -->
 		
@@ -290,9 +301,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="more">
+			<!--<div class="more">
 	    		<a href="join.html">浏览更多<i class="iconfont icon-jiang-copy"></i></a>
-	    	</div>
+	    	</div>-->
 	    </div>
 	    </div>
 	    <!-- ## join ## -->
@@ -335,9 +346,9 @@
 	    			</div>
 	    		</div>
 	    	</div>
-	    	<div class="more">
+	    	<!--<div class="more">
 	    		<a href="news.html">浏览更多<i class="iconfont icon-jiang-copy"></i></a>
-	    	</div>
+	    	</div>-->
 	    </div>
 		<!-- ## news ## -->
 		
