--- a/join.html
+++ b/join.html
@@ -13,7 +13,9 @@
 		<script type="text/javascript" src="js/less.js" ></script>
     	<!-- iconfont css -->
     	<link rel="stylesheet" href="iconfont/iconfont.css"  type="text/css"/>
-    	
+		<!--[if It IE 9]>
+	    <meta http-equiv="Refresh" content="0;url=ie.html" />
+	    <![endif]-->
 	</head>
 	<body>
 		
